overflow hidden fixed

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     width: 600px;
     border: 1px solid black;
     position: relative;
+    overflow: hidden;
 }
 
 #taxi {
@@ -30,12 +31,15 @@ body {
 
 #car1 {
     top: -50px;
+    left: 220px;
 }
 
 #car2 {
-    top:  -150px;
+    top:  -200px;
+    left: 50px;
 }
 
 #car3 {
-    top: -250px;
+    top: -280px;
+    left: 400px;
 }
